--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="gif-container">
-        <img src="images/TMIH01.gif" alt="GIF 1" class="gif">
+        <img src="./images/TMIH01.gif" alt="GIF 1" class="gif">
         <img src="images/TMIH02.gif" alt="GIF 2" class="gif">
         <img src="images/TMIH03.gif" alt="GIF 3" class="gif">
         <img src="images/TMIH04.gif" alt="GIF 4" class="gif">
