--- a/index.html
+++ b/index.html
@@ -49,5 +49,18 @@
         });
     </script>
 
+    <button id="info-btn" class="info-btn" onclick="toggleInfo()">i</button>
+
+    <div id="info-box" class="info-box">
+        <p>This is a floating info box. You can write any text here to give additional information to the user. Click "i" again to close.</p>
+    </div>
+
+    <div id="lightbox" class="lightbox"></div>
+        <span class="close" onclick="closeLightbox()">&times;</span>
+        <img id="lightbox-img" class="lightbox-img">
+    </div>
+
+    <script src="scripts.js"></script>
+
 </body>
 </html>
