--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
         });
     </script>
 
-    <button id="info-btn" class="info-btn" onclick="toggleInfo()">i</button>
+    <button id="info-btn" class="info-btn" onclick="toggleInfo()"><i>i</i></button>
 
     <div id="info-box" class="info-box">
-        <p>This is a floating info box. You can write any text here to give additional information to the user. Click "i" again to close.</p>
+        <p>
+        <h4><b><i>The Motion in Horse</i></b><br>
+        Gabriele de Seta</h4>
+        <h5>24 animated .GIFs<br>
+        2024</h5>
+        In June 1878, Eadweard Muybridge shot a series of "automatic electro-photographs" capturing the movement of a galloping horse. Published as a book titled The Horse in Motion in 1882, Muybridge's frame sequences are the first example of chronophotography and, arguably, of cinema. For this work, I prompted OpenAI's DALL·E 3 text-to-image model to generate Muybridge's photographs of horses in motion, then extracted individual frames from each series, aligned them with an image recognition algorithm, and sequenced them into short looping animations. On a first look, these animations capture recognizable features of galloping horses, but the more one looks at them, the more it is evident that generative models fail at replicating Muybridge's achievement - the horses hover in place, their legs multiply or flail, jockeys appear and disappear.
+        </p>
     </div>
 
     <div id="lightbox" class="lightbox"></div>
