--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
     </div>
 
-    <div id="lightbox" class="lightbox"></div>
+    <div id="lightbox" class="lightbox">
         <span class="close" onclick="closeLightbox()">&times;</span>
         <img id="lightbox-img" class="lightbox-img">
     </div>
