--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 </head>
 <body>
     <div class="gif-container">
-        <img src="images/TMIH01.gif" alt="GIF 1" class="gif">
-        <img src="images/TMIH02.gif" alt="GIF 2" class="gif">
-        <img src="images/TMIH03.gif" alt="GIF 3" class="gif">
-        <img src="images/TMIH04.gif" alt="GIF 4" class="gif">
-        <img src="images/TMIH05.gif" alt="GIF 5" class="gif">
-        <img src="images/TMIH06.gif" alt="GIF 6" class="gif">
-        <img src="images/TMIH07.gif" alt="GIF 7" class="gif">
-        <img src="images/TMIH08.gif" alt="GIF 8" class="gif">
-        <img src="images/TMIH09.gif" alt="GIF 9" class="gif">
-        <img src="images/TMIH10.gif" alt="GIF 10" class="gif">
-        <img src="images/TMIH11.gif" alt="GIF 11" class="gif">
-        <img src="images/TMIH12.gif" alt="GIF 12" class="gif">
-        <img src="images/TMIH13.gif" alt="GIF 13" class="gif">
-        <img src="images/TMIH14.gif" alt="GIF 14" class="gif">
-        <img src="images/TMIH15.gif" alt="GIF 15" class="gif">
-        <img src="images/TMIH16.gif" alt="GIF 16" class="gif">
-        <img src="images/TMIH17.gif" alt="GIF 17" class="gif">
-        <img src="images/TMIH18.gif" alt="GIF 18" class="gif">
-        <img src="images/TMIH19.gif" alt="GIF 19" class="gif">
-        <img src="images/TMIH20.gif" alt="GIF 20" class="gif">
-        <img src="images/TMIH21.gif" alt="GIF 21" class="gif">
-        <img src="images/TMIH22.gif" alt="GIF 22" class="gif">
-        <img src="images/TMIH23.gif" alt="GIF 23" class="gif">
-        <img src="images/TMIH24.gif" alt="GIF 24" class="gif">
+        <img src="images/TMIH01.gif" alt="The Motion in Horse 1" class="gif">
+        <img src="images/TMIH02.gif" alt="The Motion in Horse 2" class="gif">
+        <img src="images/TMIH03.gif" alt="The Motion in Horse 3" class="gif">
+        <img src="images/TMIH04.gif" alt="The Motion in Horse 4" class="gif">
+        <img src="images/TMIH05.gif" alt="The Motion in Horse 5" class="gif">
+        <img src="images/TMIH06.gif" alt="The Motion in Horse 6" class="gif">
+        <img src="images/TMIH07.gif" alt="The Motion in Horse 7" class="gif">
+        <img src="images/TMIH08.gif" alt="The Motion in Horse 8" class="gif">
+        <img src="images/TMIH09.gif" alt="The Motion in Horse 9" class="gif">
+        <img src="images/TMIH10.gif" alt="The Motion in Horse 10" class="gif">
+        <img src="images/TMIH11.gif" alt="The Motion in Horse 11" class="gif">
+        <img src="images/TMIH12.gif" alt="The Motion in Horse 12" class="gif">
+        <img src="images/TMIH13.gif" alt="The Motion in Horse 13" class="gif">
+        <img src="images/TMIH14.gif" alt="The Motion in Horse 14" class="gif">
+        <img src="images/TMIH15.gif" alt="The Motion in Horse 15" class="gif">
+        <img src="images/TMIH16.gif" alt="The Motion in Horse 16" class="gif">
+        <img src="images/TMIH17.gif" alt="The Motion in Horse 17" class="gif">
+        <img src="images/TMIH18.gif" alt="The Motion in Horse 18" class="gif">
+        <img src="images/TMIH19.gif" alt="The Motion in Horse 19" class="gif">
+        <img src="images/TMIH20.gif" alt="The Motion in Horse 20" class="gif">
+        <img src="images/TMIH21.gif" alt="The Motion in Horse 21" class="gif">
+        <img src="images/TMIH22.gif" alt="The Motion in Horse 22" class="gif">
+        <img src="images/TMIH23.gif" alt="The Motion in Horse 23" class="gif">
+        <img src="images/TMIH24.gif" alt="The Motion in Horse 24" class="gif">
     </div>
 
-    <button id="fullscreenBtn">🗖</button>
+    <button id="fullscreenBtn">⛶</button>
 
     <script>
         const fullscreenBtn = document.getElementById('fullscreenBtn');
@@ -49,7 +49,7 @@
         });
     </script>
 
-    <button id="info-btn" class="info-btn" onclick="toggleInfo()"><i>i</i></button>
+    <button id="info-btn" class="info-btn" onclick="toggleInfo()">ⓘ</button>
 
     <div id="info-box" class="info-box">
         <p>
